--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
   "version": 2,
-  "installCommand": "npm install",
-  "buildCommand": "cd client && npm run build",
-  "outputDirectory": "client/build",
-  "framework": "svelte"
+  "installCommand": "npm_config_ignore_scripts=false npm --prefix client ci",
+  "buildCommand": "npm --prefix client run build && mv client/.vercel .vercel",
+  "framework": "sveltekit"
 }
