Initialize monorepo with client and server setup
Added README with usage instructions, set up npm workspaces, and created minimal Express server in server/index.js. Updated package.json and added server/package.json for server dependencies.

--- a/package.json
+++ b/package.json
@@ -2,15 +2,24 @@
     "name": "huddle",
     "private": true,
     "workspaces": [
-        "client"
+        "client",
+        "server"
     ],
     "scripts": {
-        "dev": "npm --prefix client run dev",
-        "build": "npm --prefix client run build",
-        "preview": "npm --prefix client run preview",
         "client:dev": "npm --prefix client run dev",
         "client:build": "npm --prefix client run build",
         "client:preview": "npm --prefix client run preview",
+        "server:dev": "npm --prefix server run dev",
+        "server:start": "npm --prefix server run start",
+        "dev:all": "concurrently \"npm:server:dev\" \"npm:client:dev\" --names \"server,client\" --prefix \"[{name}]\"",
+    "build:all": "npm --prefix client run build",
+        "start": "concurrently \"npm:server:start\" \"npm:client:preview\" --names \"server,client\" --prefix \"[{name}]\"",
+        "dev": "npm run dev:all",
+        "build": "npm run build:all",
+        "preview": "npm run start",
         "workspace:build": "npm --workspace=client run build"
+    },
+    "devDependencies": {
+        "concurrently": "^8.0.0"
     }
 }
